--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,8 @@
     <script type="module">
         import './SortPuzzle.mjs';
         import './TestTube.mjs';
+        window.addEventListener('click', () => {
+            document.body.requestFullscreen();
+        });
     </script>
 </html>
